# cub3d

./: CMakeLists.txt  Cub3D  Makefile  color_parsing.c  create_buffer.c  cub3d.h  draw3d.c  draw_player.c  drawing_utils.c  game_config.c  game_config2.c  game_init.c  hooks.c  main.c  map.c  map_parsing.c  movement.c  pars.c  parsing.c  path_parsing.c  player_direction_init.c  player_movement.c  player_parsing.c  raycasting.c  rays.c  resolution_parsing.c  rounding.c  screenshot.c  sprite_drawing.c  sprite_parsing.c  sprite_utils.c  sprites.c  structure.txt  tex_drawing.c  tex_utils.c  textures.c  utils.c
gnl/: get_next_line.c  get_next_line.h  get_next_line_utils.c
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  (+6 more)
maps/: map.cub
minilibx_mms_20200219/: mlx_window.swift
minilibx_mms_20200219/man/man3/: mlx.3  (+2 more)
old/: draw3d.c  draw_player.c  hooks.c  map.c  pars.c  raycasting.c  rounding.c
parsing/: color_parsing.c  map_parsing.c  path_parsing.c  player_parsing.c  resolution_parsing.c  sprite_parsing.c
player/: hooks.c  player_direction_init.c  player_movement.c  rays.c
sprite/: sprite_drawing.c  sprite_utils.c
srcs/: cub3d.h  main.c
srcs/maps/: map.cub  map.notcub
srcs/parsing/: color_parsing.c  map_parsing.c  path_parsing.c  player_parsing.c  resolution_parsing.c  sprite_parsing.c
srcs/player/: hooks.c  player_movement.c  rays.c
srcs/sprite/: sprite_utils.c
srcs/texture/: drawing_utils.c  tex_drawing.c  tex_utils.c
srcs/utils/: game_config.c  game_config2.c  screenshot.c
srcs/validation/: errors.c  exit.c  map_aaaaaaaaaa.c  map_check.c  map_check2.c  map_check3.c  map_check4.c  map_check5.c  map_check6.c  map_check7.c
texture/: drawing_utils.c  tex_drawing.c  tex_utils.c
validation/: errors.c  exit.c  map_check.c  map_check2.c  map_check3.c
